--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -207,18 +207,19 @@ We would also like to thank our college staff members and well-wishers who direc
 Lastly, we thank God almighty, our family, professors and friends for their constant encouragement without which this project would not have been possible.\\
 \thispagestyle{empty}
 \newpage
-\begin{abstract}
+\begin{center}
+\Large Abstract
+\end{center}
+\normalsize
 \hspace{4em}Orbital mechanics is the study of the motions of artificial satellites and space vehicles moving under the influence of forces. It plays a vital role in planning space missions in various aspects such as designing orbital trajectory for various missions, calculating lagrangian points etc., and can find many engineering applications  including ascent trajectories, reentry and landing, rendezvous computations, lunar and interplanetary trajectories. 
 
 In recent years, as there is a lot of progress unfolding in space industry, many aspiring students are keen on gaining knowledge and pursue careers in space industry. As such, strong foundations of the fundamentals are required for the students for them to get ahead in the field. There are lots of tools like STK, FreeFlyer etc., for learning but these don't start from the bare minimum of the concepts. This led to the idea of developing of MOPy.
 
 Mechanics of Orbit using Python(MOPy) is learning tool designed and developed with the purpose of introducing the core concepts of Orbital Mechanics. MOPy uses a interactive UI with tool tips and a 3D Environment with an interactive virtual universe. The 3D Environment helps the learner to visualize the concepts in a much accessible and easier way.
-\end{abstract}
+
 \thispagestyle{empty}
 \newpage
 \tableofcontents
-\thispagestyle{empty}
-\newpage
 \listoffigures
 \listoftables
 \thispagestyle{empty}
