--- a/Thesis/codes/LP.tex
+++ b/Thesis/codes/LP.tex
@@ -1,3 +1,5 @@
+\subsection{Lagrangian Points}
+\begin{lstlisting}[language=python, caption=LP.py]
 from math import pi
 from numpy import arange
 import matplotlib.pyplot as plt
@@ -32,6 +34,4 @@ plt.plot(xvals, yvals)
 plt.grid()
 plt.ylim(-0.01, 0.01)
 plt.show()
-
-
-
+\end{lstlisting}
