--- a/Thesis/Sections/details.tex
+++ b/Thesis/Sections/details.tex
@@ -25,6 +25,74 @@ This can convert state velocity vector into orbital elements and vice versa. The
 \end{floatrow}
 \end{figure}
 
+\large \hspace{-3em}\textbf{Classical Orbital Elements}
+\normalsize
+\begin{enumerate}
+\item \textbf{Semi-major Axis($a$):} This is a constant that defines the size of the orbit. In Circular it is the radius of the circle. It is the longest diameter of an ellipse.
+\begin{align}
+a&= \dfrac{r_a+r_p}{2}\\
+a&=\dfrac{h^2/\mu}{1-e^2}\\
+where,\nonumber \\
+&r_a = Radius\;of\;Apogee(F_1B)\nonumber\\
+&r_p = Radius\;of\;Perigee(F_1A)\nonumber \\
+&\mu = Standard\;Gravitational\;Parameter,\nonumber
+\end{align}
+\item \textbf{Eccentricity($e$):} This the parameter of the conic section which determines its shape. It is defined as the ratio of distance b/w two foci to the Major-axis.
+\begin{align}
+e&=\dfrac{c}{a}\\
+e&=\frac{1}{\mu}\left[\left(\frac{v^2-\mu}{r}\right)\times \overrightarrow{r}-(\overrightarrow{r}.\overrightarrow{v})\times \overrightarrow{v}\right]\label{codeformecc} \\ 
+where, \nonumber\\
+r_a\;\&\;r_p &= Radius\;of\;Apogee\;\&\;Perigee\;respectively,\nonumber\\
+\mu &= Standard\;Gravitational\;Parameter,\nonumber \\
+\overrightarrow{v}\;\&\; v &= Velocity\;vector\;\&\;Magnitude\;of\;Velocity\;Vector\;at\;r,\nonumber \\
+\overrightarrow{r}\;\&\;r &= Radius\;Vector\;\&\;Magnitude\;of\;Radius\;Vector.\nonumber 
+\end{align}
+\item \textbf{Inclination($e$)}: It is the tilt of the orbit w.r.t the equatorial plane, measured at ascending node. It can also be defined as the angle from $\hat{K}$ unit vector to the specific angular momentum vector $\vec{h}$.
+\begin{align}
+i &= \cos^{-1}\left(\dfrac{\overrightarrow{h}.\overrightarrow{K}}{|h|}\right)\\
+where,\nonumber \\
+\overrightarrow{h}&=Specific\;Angular\;Momentum, \nonumber \\
+\overrightarrow{K}&=Unit\;Vector\;in\;Z\;direction, \nonumber  \\
+|h|&=Magnitude\;of\;Specific\;Angular\;Momentum. \nonumber
+\end{align}
+\item \textbf{Right Ascension of Ascending Node($\Omega$):} RAAN horizontally orients the ascending node of the orbit w.r.t the Equatorial plane’s vernal equinox, measured in an equatorial plane This is not defined when the inclination is 0 or 180 degree. It lies between 0 to 360 degrees.
+\begin{align}
+\Omega &= \cos^{-1}\left(\dfrac{\overrightarrow{I}.\overrightarrow{n}}{|n|}\right)\\
+where, \nonumber \\
+\overrightarrow{n}&= Nodal\;vector \nonumber\\
+It's\;the\;vector\;that\;&joins\;the\;ascending\;node\;and\;the\;descending\;node. \nonumber
+\end{align}
+\item \textbf{Argument of Perigee($\omega$):} Argument of Perigee defines the orientation of the ellipse in the orbital plane, as an angle measured from the ascending node to the periapsis measure in the direction of the spacecraft’s motion. This is not defined when inclination is 0 or 180 degree or eccentricity is 0. It lies between 0 to 360 degree.
+\begin{align}
+\omega &= \cos^{-1}\left(\dfrac{\overrightarrow{n}.\overrightarrow{e}}{|n||e|}\right)\\
+where, \nonumber\\
+\overrightarrow{e}&=Eccentricity Vector. \nonumber
+\end{align}
+\item \textbf{True Anomaly($\nu$):} True Anomaly defines the position of the spacecraft w.r.t perigee. It’s the angle between the spacecraft and the perigee of the orbit. It lies between 0 to 360 degree. 
+\begin{align}
+\nu &= \cos^{-1}\left(\dfrac{\overrightarrow{e}.\overrightarrow{r}}{|e||r|}\right)\\
+where,\nonumber\\
+\overrightarrow{r}&=Radius Vector\nonumber
+\end{align}
+\end{enumerate}
+\large \textbf{Alternate Orbital Elements}
+\normalsize
+\begin{enumerate}
+\item \textbf{Longitude of Perigee($Pi$)} is the angle from the principle direction to perigee. This is used whenever inclination is either 0$^o$ or 180$^o$ as there is no ascending node. It's lies between $0^0$ to $360^0$. In the figure(\ref{AOE}) Longitude of perigee is represented as \enquote{$\Pi$}.
+\begin{align}
+\Pi = \cos^{-1}\left(\dfrac{\overrightarrow{I}.\overrightarrow{e}}{|e|}\right)
+\end{align}
+\item \textbf{True Longitude} is the angle from the principle direction to the spacecraft's position. This is used whenever there is no perigee and the the inclination is either $0^0$ or $180^0$. It's lies between $0^0$ to $360^0$. It lies between 0 to 360 degree. In the figure(\ref{AOE})True Longitude is represented as \enquote{$l$}
+In the figure(\ref{AOE})True Longitude is represented as \enquote{$l$}. In the figure(\ref{AOE}) Longitude of perigee is represented as \enquote{$\Pi$}.
+\begin{align}
+l = \cos^{-1}\left(\dfrac{\overrightarrow{I}.\overrightarrow{r}}{|r|}\right)
+\end{align}
+\item \textbf{Argument of Latitude($u$)} is the angle from ascending to the spacecraft's position. This is used whenever a perigee is absent(i.e., e=0,Circular Orbit). It's lies between $0^0$ to $360^0$.\\
+In the figure(\ref{AOE}) Argument of latitude is represented as \enquote{$u$}.
+\begin{align}
+u = \cos^{-1}\left(\dfrac{\overrightarrow{n}.\overrightarrow{r}}{|n||r|}\right)
+\end{align}
+\end{enumerate}
 \subsection{2D and 3D Orbits}
 
 Based on the inputs given the application can plot either 2D or 3D or both. If the inputs are just Semi major axis and eccentricity or Radius of perigee and apogee or, $r_1,\;v_1,\;\gamma_1$ then the resultant plot will be in the perifocal frame. If the inputs are state and velocity vector or orbital elements then the resultant will be a 3D orbit. 
@@ -40,6 +108,32 @@ Based on the inputs given the application can plot either 2D or 3D or both. If t
 \caption{I/O for 2D and 3D orbits}
 \label{o23}
 \end{table}
+There are two ways to plot a orbit, if the plot is on a 2D plane, i.e., Perifocal Plane, the the trajectory equation can be used to plot it easily.
+$$r=\dfrac{h^2/\mu}{1 - e\cos(\theta)}$$
+If the plot is 3D then solving for the trajectory analytically can be tricky and expensive computing wise depending on the orbit. But, solving it numerically will yeild the orbit with wide range of accuracy depending on the numerical method. The method has mainly two properties to be considered for at this level, the computing speed and the accuracy. A good compromise between these both is desirable for most of the cases. In this case we need a ODE solver. Here are a few types of numerical methods:
+\begin{enumerate}
+\item Euler Method
+\item Backward Euler Method
+\item First-order Exponential integrator Method
+\item Generalizations
+\item Parallel-in-time Methods
+\item Integrals over Infinite intervals
+\end{enumerate} 
+In a programming language based on these methods ODE solvers are written. The most popular ones are:
+\begin{enumerate}
+\item \textbf{lsoda} - This automatically selects a solver which is appropriate for the given equation.
+\item \textbf{lsode} - Since lsoda turns out to be slow, then the DE might need a stiff solver(i.e., very small time steps), this will choose only the stiff solvers 
+\item \textbf{ode23} -  Simultaneously uses fourth and fifth order RK formulas to make error estimates and adjust the
+time step accordingly. For nonstiff ODEs
+\item \textbf{ode45} - Uses simultaneously second and third order Runge Kutta formulas to make estimates of the
+error, and calculate the time step size. Since the second and third order RK require less steps, ode23 is
+“less expensive” in terms of computation demands than ode45, but is also lower order. Use for nonstiff
+ODEs
+\end{enumerate}
+For MOPy lsoda is sufficient enough for now. So lsoda is used to solve for the acceleration vector. If the acceleration vector is solved twice then we obtailn the position vectors using which a 3D plot can be plotted. The acceleration vector is: 
+
+$$Enter the acceleration vector$$
+
 \subsection{Euler Angle}
 
 The inputs for this are as in table(\ref{eadcm}). This code can be fed the model in 3D environment and the orientation of the model can be manipulated with this.
@@ -68,6 +162,13 @@ In this section, the user can either input the values or interact with the model
 \caption{I/O for Sphere of Influence}
 \label{soi}
 \end{table}
+The sun is the dominant celestial body in the solar system. It has a mass of over 300,000 earths. The sun’s gravitational pull holds all the planets in its hold according to Newton’s law of gravity. However, near a given planet, the influence of its own gravity exceeds that of the sun. For example, at its surface the earth’s gravitational force is over 1600 times greater than the sun’s. The inversesquare nature of the law of gravity means that the force of gravity $F_g$ drops off rapidly with distance r from the center of attraction. If $F_{g0}$ is the gravitational force at the surface of a planet with radius $r_0$, then Figure 8.5 shows how rapidly the force diminishes with distance. At ten body radii, the force is 1$\%$ of its value at the surface. Eventually, the force of the sun’s gravitational field overwhelms that of the planet.
+
+To estimate the planets Sphere of Influence, the three body problem system comprising of planet p of mass MiB\_ mass, the sun s and its mass MaB\_ mass with the distance between then being R and the equation on hand is:
+\begin{align*}
+r_{SOI}&=R\left(\dfrac{MiB\_ mass}{MaB\_ mass}\right)^{2/5}
+\end{align*}
+
 \subsection{Orbital Transfer}
 This feature simulates the orbital transfer using various numerical methods. For now, this can perform Hohmann Transfer. The Inputs and outputs are as in table(\ref{tab:ot})
 \begin{table}[H]
@@ -93,6 +194,17 @@ In this section the user can choose between Gregorian calendar and Julian calend
 \caption{I/O for Julian-day}
 \label{tab:jd}
 \end{table}
+The Julian day is the continuous count of days since the beginning of the Julian period i.e., January 1, 4713 B.C. at 12 Noon, and is used primarily by astronomers for easily calculating elapsed days between two events.
+To calculate a Julian Day there are many formulae, but the generalised formula is:\\
+To convert from Gregorian calendar:
+\begin{multline*}
+JDN = \dfrac{1461\left(Y+4800+\dfrac{M-14}{12}\right)}{4}+\dfrac{367\left(M-2-12\dfrac{M-14}{12}\right)}{12} - \\
+\dfrac{3\left( \dfrac{Y+4900+\dfrac{M-14}{12}}{100}\right))}{4}+D-32075
+\end{multline*}
+To convert from Julian Calendar:
+$$JDN = 367 \times Y - \dfrac{7 \left( Y+5001+\dfrac{M-9}{7}\right)}{4}+\dfrac{275M}{9}+D+1729777$$
+Once the Julian Day Number is obtained the time is taken into account. So, The Julian day becomes:
+$$JD = JDN+\dfrac{HH-12}{24}+\dfrac{MM}{1440}+\dfrac{SS}{86400}$$
 \subsection{Calculation of Parameters of the Orbit}
 The user can obtain various parameters by giving the details that they know of. If necessary they can plot the orbit too.
 \begin{table}[H]
