--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -33,6 +33,8 @@
 \usepackage[table]{xcolor}
 \newfloatcommand{capbtabbox}{table}[][\FBwidth]
 \usepackage{framed}
+% \usepackage[table,xcdraw]{xcolor}
+\usepackage{lscape}
 
 \definecolor{codegreen}{rgb}{0,0.6,0}
 \definecolor{codegray}{rgb}{0.5,0.5,0.5}
@@ -144,17 +146,24 @@
 \input{codes/LP}
 
 \input{codes/dbms}
+\newpage
+
+
+
+\input{codes/db}
 
 \newpage
 
 \begin{thebibliography}{99}
+	\bibitem{OMES}{Howard D. Curtis },{\textit{\enquote{Orbital Mechanics for Engineering Students}}},{ 3\textsuperscript{rd} Edition}, { Elsevier Publications},{ 2014}	
+	
 	\bibitem{TB-1}{Bate, Roger R., Donald D. Muller and Jerry E. White},{ \textit{\enquote{Fundamentals Of Astrodynamics}}},{New York, NY},{ Dover Publications},{1971}.
 	
 	\bibitem{morgan}{\textit{\enquote{Space: Investing in the Final Frontier}}},{Jul, 24$^{th}$, 2020}, { Retrieved on 25$^{th}$ May 2021 from Morgan Stanley},{\href{https://www.morganstanley.com/ideas/investing-in-space}{ MorganStanley.com}}
 	
 	\bibitem{lsoda}{\textit{\enquote{Numerical Solutions to Differential Equations in R}}},{ Nessy Tania, Erica Graham}, {Qubes.}
 	
-	\bibitem{indiaspace}{\textit{\enquote{Preparing to Scale New Heights: Privatisation of India's commercial Space Sector}}},{ Retrieved on 25$^{th}$ May 2021 from Morgan Stanley},{\href{https://www.pwc.in/research-insights/2020/preparing-to-scale-new-heights.html}{ pwc.in}}
+	\bibitem{indiaspace}{\textit{\enquote{Preparing to Scale New Heights: Privatisation of India's commercial Space Sector}}},{ Retrieved on 25$^{th}$ May 2021 from PWC},{\href{https://www.pwc.in/research-insights/2020/preparing-to-scale-new-heights.html}{ pwc.in}}
 	
 	\bibitem{lic}{GNU General Public License version-3},{ Open Source Initiative},{\href{https://opensource.org/licenses/gpl-3.0.html}{ OpenSourceInitiative.org}}
 
