--- a/Thesis/codes/db.tex
+++ b/Thesis/codes/db.tex
@@ -115,7 +115,7 @@
   \cellcolor[HTML]{FFFFFF}2741.3 &
   \cellcolor[HTML]{F5F5F5}4444.5 &
   \cellcolor[HTML]{FFFFFF}4436.8 \\ \hline
-\textbf{Apohelion} &
+\textbf{Apohelion($10^6km$)} &
   \cellcolor[HTML]{F5F5F5}69.8 &
   \cellcolor[HTML]{FFFFFF}108.9 &
   \cellcolor[HTML]{F5F5F5}152.1 &
@@ -170,7 +170,7 @@
   \cellcolor[HTML]{FFFFFF}0.046 &
   \cellcolor[HTML]{F5F5F5}0.011 &
   \cellcolor[HTML]{FFFFFF}0.244 \\ \hline
-\textbf{Obliquity to Orbit} &
+\textbf{Obliquity to Orbit($degrees$)} &
   \cellcolor[HTML]{F5F5F5}0.034 &
   \cellcolor[HTML]{FFFFFF}177.4 &
   \cellcolor[HTML]{F5F5F5}23.4 &
